// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contracts: index contracts with values 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ReduxForm
    changeContractFilter={[Function]}
    contracts={
      Object {
        "Cloner": Array [
          Object {
            "address": "d07e932212f7f368b6948ffd96e1d4c726c8395d",
            "createdAt": 1512480630000,
          },
          Object {
            "address": "2c6619f0418c2f191e2225091f7692363a91c336",
            "createdAt": 1512480770000,
          },
        ],
        "GreeterA": Array [
          Object {
            "address": "0293f9b10a4453667db7fcfe74728c9d821add4b",
            "createdAt": 1512481078000,
          },
        ],
        "GreeterB": Array [
          Object {
            "address": "GreeterA",
            "createdAt": 1512481078000,
          },
        ],
      }
    }
    fetchContracts={[Function]}
    filter=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "changeContractFilter": [Function],
      "contracts": Object {
        "Cloner": Array [
          Object {
            "address": "d07e932212f7f368b6948ffd96e1d4c726c8395d",
            "createdAt": 1512480630000,
          },
          Object {
            "address": "2c6619f0418c2f191e2225091f7692363a91c336",
            "createdAt": 1512480770000,
          },
        ],
        "GreeterA": Array [
          Object {
            "address": "0293f9b10a4453667db7fcfe74728c9d821add4b",
            "createdAt": 1512481078000,
          },
        ],
        "GreeterB": Array [
          Object {
            "address": "GreeterA",
            "createdAt": 1512481078000,
          },
        ],
      },
      "destroyOnUnmount": true,
      "enableReinitialize": false,
      "fetchContracts": [Function],
      "filter": "",
      "forceUnregisterOnUnmount": false,
      "form": "Contracts",
      "getFormState": [Function],
      "initialValues": undefined,
      "keepDirtyOnReinitialize": false,
      "persistentSubmitErrors": false,
      "pure": true,
      "shouldAsyncValidate": [Function],
      "shouldValidate": [Function],
      "touchOnBlur": true,
      "touchOnChange": false,
    },
    "ref": "wrapped",
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "changeContractFilter": [Function],
        "contracts": Object {
          "Cloner": Array [
            Object {
              "address": "d07e932212f7f368b6948ffd96e1d4c726c8395d",
              "createdAt": 1512480630000,
            },
            Object {
              "address": "2c6619f0418c2f191e2225091f7692363a91c336",
              "createdAt": 1512480770000,
            },
          ],
          "GreeterA": Array [
            Object {
              "address": "0293f9b10a4453667db7fcfe74728c9d821add4b",
              "createdAt": 1512481078000,
            },
          ],
          "GreeterB": Array [
            Object {
              "address": "GreeterA",
              "createdAt": 1512481078000,
            },
          ],
        },
        "destroyOnUnmount": true,
        "enableReinitialize": false,
        "fetchContracts": [Function],
        "filter": "",
        "forceUnregisterOnUnmount": false,
        "form": "Contracts",
        "getFormState": [Function],
        "initialValues": undefined,
        "keepDirtyOnReinitialize": false,
        "persistentSubmitErrors": false,
        "pure": true,
        "shouldAsyncValidate": [Function],
        "shouldValidate": [Function],
        "touchOnBlur": true,
        "touchOnChange": false,
      },
      "ref": "wrapped",
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`Contracts: index filter with value 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ReduxForm
    changeContractFilter={[Function]}
    contracts={Object {}}
    fetchContracts={[Function]}
    filter="Greeter"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "changeContractFilter": [Function],
      "contracts": Object {},
      "destroyOnUnmount": true,
      "enableReinitialize": false,
      "fetchContracts": [Function],
      "filter": "Greeter",
      "forceUnregisterOnUnmount": false,
      "form": "Contracts",
      "getFormState": [Function],
      "initialValues": undefined,
      "keepDirtyOnReinitialize": false,
      "persistentSubmitErrors": false,
      "pure": true,
      "shouldAsyncValidate": [Function],
      "shouldValidate": [Function],
      "touchOnBlur": true,
      "touchOnChange": false,
    },
    "ref": "wrapped",
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "changeContractFilter": [Function],
        "contracts": Object {},
        "destroyOnUnmount": true,
        "enableReinitialize": false,
        "fetchContracts": [Function],
        "filter": "Greeter",
        "forceUnregisterOnUnmount": false,
        "form": "Contracts",
        "getFormState": [Function],
        "initialValues": undefined,
        "keepDirtyOnReinitialize": false,
        "persistentSubmitErrors": false,
        "pure": true,
        "shouldAsyncValidate": [Function],
        "shouldValidate": [Function],
        "touchOnBlur": true,
        "touchOnChange": false,
      },
      "ref": "wrapped",
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`Contracts: index mapStateToProps with default values 1`] = `
Object {
  "chainIds": Array [
    Object {
      "id": "0293f9b10a4453667db7fcfe74728c9d821add4b",
      "label": "new",
    },
  ],
  "contracts": Object {
    "Cloner": Array [
      Object {
        "address": "d07e932212f7f368b6948ffd96e1d4c726c8395d",
        "createdAt": 1512480630000,
      },
      Object {
        "address": "2c6619f0418c2f191e2225091f7692363a91c336",
        "createdAt": 1512480770000,
      },
    ],
    "GreeterA": Array [
      Object {
        "address": "0293f9b10a4453667db7fcfe74728c9d821add4b",
        "createdAt": 1512481078000,
      },
    ],
    "GreeterB": Array [
      Object {
        "address": "GreeterA",
        "createdAt": 1512481078000,
      },
    ],
  },
  "filter": "Time",
  "isLoading": undefined,
  "selectedChain": "ff7ef45acb7a775018bc765b6fdeea432aaddfcd846cf6dd9442724266b1eac9",
}
`;

exports[`Contracts: index render contracts with empty values 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ReduxForm
    chainIds={Array []}
    changeContractFilter={[Function]}
    contracts={Object {}}
    fetchContracts={[Function]}
    filter=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "chainIds": Array [],
      "changeContractFilter": [Function],
      "contracts": Object {},
      "destroyOnUnmount": true,
      "enableReinitialize": false,
      "fetchContracts": [Function],
      "filter": "",
      "forceUnregisterOnUnmount": false,
      "form": "Contracts",
      "getFormState": [Function],
      "initialValues": undefined,
      "keepDirtyOnReinitialize": false,
      "persistentSubmitErrors": false,
      "pure": true,
      "shouldAsyncValidate": [Function],
      "shouldValidate": [Function],
      "touchOnBlur": true,
      "touchOnChange": false,
    },
    "ref": "wrapped",
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "chainIds": Array [],
        "changeContractFilter": [Function],
        "contracts": Object {},
        "destroyOnUnmount": true,
        "enableReinitialize": false,
        "fetchContracts": [Function],
        "filter": "",
        "forceUnregisterOnUnmount": false,
        "form": "Contracts",
        "getFormState": [Function],
        "initialValues": undefined,
        "keepDirtyOnReinitialize": false,
        "persistentSubmitErrors": false,
        "pure": true,
        "shouldAsyncValidate": [Function],
        "shouldValidate": [Function],
        "touchOnBlur": true,
        "touchOnChange": false,
      },
      "ref": "wrapped",
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`Contracts: index render contracts with mocked values 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ReduxForm
    chainIds={
      Array [
        Object {
          "id": "0293f9b10a4453667db7fcfe74728c9d821add4b",
          "label": "new",
        },
      ]
    }
    changeContractFilter={[Function]}
    contracts={
      Object {
        "Cloner": Array [
          Object {
            "address": "d07e932212f7f368b6948ffd96e1d4c726c8395d",
            "createdAt": 1512480630000,
          },
          Object {
            "address": "2c6619f0418c2f191e2225091f7692363a91c336",
            "createdAt": 1512480770000,
          },
        ],
        "GreeterA": Array [
          Object {
            "address": "0293f9b10a4453667db7fcfe74728c9d821add4b",
            "createdAt": 1512481078000,
          },
        ],
        "GreeterB": Array [
          Object {
            "address": "GreeterA",
            "createdAt": 1512481078000,
          },
        ],
      }
    }
    fetchContracts={[Function]}
    filter="Greeter"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "chainIds": Array [
        Object {
          "id": "0293f9b10a4453667db7fcfe74728c9d821add4b",
          "label": "new",
        },
      ],
      "changeContractFilter": [Function],
      "contracts": Object {
        "Cloner": Array [
          Object {
            "address": "d07e932212f7f368b6948ffd96e1d4c726c8395d",
            "createdAt": 1512480630000,
          },
          Object {
            "address": "2c6619f0418c2f191e2225091f7692363a91c336",
            "createdAt": 1512480770000,
          },
        ],
        "GreeterA": Array [
          Object {
            "address": "0293f9b10a4453667db7fcfe74728c9d821add4b",
            "createdAt": 1512481078000,
          },
        ],
        "GreeterB": Array [
          Object {
            "address": "GreeterA",
            "createdAt": 1512481078000,
          },
        ],
      },
      "destroyOnUnmount": true,
      "enableReinitialize": false,
      "fetchContracts": [Function],
      "filter": "Greeter",
      "forceUnregisterOnUnmount": false,
      "form": "Contracts",
      "getFormState": [Function],
      "initialValues": undefined,
      "keepDirtyOnReinitialize": false,
      "persistentSubmitErrors": false,
      "pure": true,
      "shouldAsyncValidate": [Function],
      "shouldValidate": [Function],
      "touchOnBlur": true,
      "touchOnChange": false,
    },
    "ref": "wrapped",
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "chainIds": Array [
          Object {
            "id": "0293f9b10a4453667db7fcfe74728c9d821add4b",
            "label": "new",
          },
        ],
        "changeContractFilter": [Function],
        "contracts": Object {
          "Cloner": Array [
            Object {
              "address": "d07e932212f7f368b6948ffd96e1d4c726c8395d",
              "createdAt": 1512480630000,
            },
            Object {
              "address": "2c6619f0418c2f191e2225091f7692363a91c336",
              "createdAt": 1512480770000,
            },
          ],
          "GreeterA": Array [
            Object {
              "address": "0293f9b10a4453667db7fcfe74728c9d821add4b",
              "createdAt": 1512481078000,
            },
          ],
          "GreeterB": Array [
            Object {
              "address": "GreeterA",
              "createdAt": 1512481078000,
            },
          ],
        },
        "destroyOnUnmount": true,
        "enableReinitialize": false,
        "fetchContracts": [Function],
        "filter": "Greeter",
        "forceUnregisterOnUnmount": false,
        "form": "Contracts",
        "getFormState": [Function],
        "initialValues": undefined,
        "keepDirtyOnReinitialize": false,
        "persistentSubmitErrors": false,
        "pure": true,
        "shouldAsyncValidate": [Function],
        "shouldValidate": [Function],
        "touchOnBlur": true,
        "touchOnChange": false,
      },
      "ref": "wrapped",
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`Contracts: index search contract input 1`] = `
Array [
  Array [
    "",
  ],
  Array [
    "UPDATE",
  ],
]
`;
